--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -6,11 +6,11 @@ on:
             - "main"
 
 jobs:
-    deploy:
+    deploy-frontend:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: ./front-end/unirent
+                working-directory: ./src/unirent-backend
         strategy:
             matrix:
                 node-version: [20.x]
@@ -19,3 +19,14 @@ jobs:
             - run: npm install
             - run: npm run build
             - run: npm start
+    deploy-backend:
+        runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: ./src/unirent-frontend
+
+        steps:
+            - uses: actions/checkout@v2
+            - run: npx build
+            - run: npx start
+    
