--- a/src/unirent-backend/.env
+++ b/src/unirent-backend/.env
@@ -1,5 +1,6 @@
-DB_HOST =
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_HOST = localhost
+DB_PORT= 3310
+DB_USERNAME= joao
+DB_PASSWORD= 123
+DB_DATABASE= unirent
+SECRET_KEY = AvaliaçãoFinaldosTrabalhos(18/08/2023)
