--- a/src/unirent-backend/tsconfig.json
+++ b/src/unirent-backend/tsconfig.json
@@ -5,13 +5,16 @@
       "es6"
     ],
     "target": "es5",
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "outDir": "./build",
+
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowImportingTsExtensions": true,
+
   }
 }
