--- a/src/unirent-backend/package.json
+++ b/src/unirent-backend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.2",
     "chalk": "^5.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -31,8 +32,8 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.5"
   }
 }
