--- a/src/unirent-backend/package.json
+++ b/src/unirent-backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -28,6 +29,7 @@
     "nodemon": "^2.0.22",
     "reflect-metadata": "^0.1.13",
     "ssh2": "^1.13.0",
+    "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.16",
     "typescript": "^5.0.4"
   },
