--- a/src/unirent-backend/package.json
+++ b/src/unirent-backend/package.json
@@ -31,6 +31,7 @@
     "ssh2": "^1.13.0",
     "swagger-ui-express": "^4.6.3",
     "typeorm": "^0.3.16",
+    "typeorm-pagination": "^2.0.3",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
