--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -1,4 +1,4 @@
-name: EC2/RDS AWS CI Workflow
+name: EC2/RDS AWS Deploy Workflow
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   id-token: write
   contents: write
 jobs:
-  start-instances:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
@@ -24,7 +24,7 @@ jobs:
     - name: Start RDS Instance
       run: |
         aws rds start-db-instance --db-instance-identifier ${{ env.RDS_INSTANCE_ID }}
-        sleep 300s
+        sleep 240s
     - name: Check RDS instance status
       run: |
         INSTANCE_STATUS=$(aws rds describe-db-instances --db-instance-identifier ${{ env.RDS_INSTANCE_ID }} --query 'DBInstances[0].DBInstanceStatus' --output text)
@@ -36,7 +36,7 @@ jobs:
     - name: Start EC2 Instance
       run: |
         aws ec2 start-instances --instance-ids ${{ env.EC2.INSTACE_ID}}
-        sleep 300s
+        sleep 60s
     - name: Check EC2 Instance status
       run: |
         INSTANCE_STATUS=$(aws ec2 describe-instances --instance-ids ${{ env.EC2_INSTANCE_ID}} --query 'Reservations[0].Instances[0].State.Name' --output text)
@@ -45,4 +45,73 @@ jobs:
           echo "EC2 instance is not open. Stopping the job..."
           exit 1
         fi
+    - name: Connect, Build and Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_PUBLIC_IP }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          cd ${{ env.REPO_PATH }} &&
+          git checkout main &&
+          git fetch --all && 
+          git reset --hard HEAD &&
+          git pull origin main &&
+          git clean -f &&
+          npm install @types/express &&
+          npm install @types/node &&
+          npm install &&
+          cd ${{ env.BACKEND_PATH }} &&
+          echo 'SECRET_KEY=${{ env.SECRET_KEY }}' >> .env &&
+          echo 'DB_HOST=${{ env.DB_HOST }}' >> .env &&
+          echo 'DB_PORT=${{ env.DB_PORT }}' >> .env &&
+          echo 'DB_USERNAME={{ env.DB_USERNAME }}' >> .env &&
+          echo 'DB_PASSWORD={{ env.DB_PASSWORD }}' >> .env &&
+          echo 'DB_SCHEMA={{ env.DB_SCHEMA }}' >> .env &&
+          cat '${{ secrets.SSH_PVT_KEY }}' >> pvt_key.pem &&
+          ssh -i "pv_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@54.174.239.75 &&
+          sleep 15 &&
+          npm start &&
+          cd ${{ env.FRONTEND_PATH }} &&
+          # Start frontent
+          sleep 1
+              exit 1
+        fi
+    - name: Connect, Build and Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_PUBLIC_IP }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          cd ${{ env.REPO_PATH }} &&
+          git checkout main &&
+          git fetch --all && 
+          git reset --hard HEAD &&
+          git pull origin main &&
+          git clean -f &&
+          npm install @types/express &&
+          npm install @types/node &&
+          npm install &&
+          cd ${{ env.BACKEND_PATH }} &&
+          echo 'SECRET_KEY=${{ env.SECRET_KEY }}' >> .env &&
+          echo 'DB_HOST=${{ env.DB_HOST }}' >> .env &&
+          echo 'DB_PORT=${{ env.DB_PORT }}' >> .env &&
+          echo 'DB_USERNAME={{ env.DB_USERNAME }}' >> .env &&
+          echo 'DB_PASSWORD={{ env.DB_PASSWORD }}' >> .env &&
+          echo 'DB_SCHEMA={{ env.DB_SCHEMA }}' >> .env &&
+          cat '${{ secrets.SSH_PVT_KEY }}' >> pvt_key.pem &&
+          ssh -i "pv_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@54.174.239.75 &&
+          sleep 15 &&
+          npm start &&
+          cd ${{ env.FRONTEND_PATH }} &&
+          # Adicionar start frontend
+    - name: Running State
+      run: sleep 4h
+    - name: Close EC2 Instance
+      run: aws ec2 stop-instances --instance-ids ${{ env.EC2_INSTANCE_ID }}
+    - name: Close RDS Instance
+      run: aws rds stop-db-instance --db-instance-identifier ${{ env.RDS_INSTANCE_ID }}
+    
+
 
