--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -98,7 +98,7 @@ jobs:
           echo 'DB_USERNAME={{ env.DB_USERNAME }}' >> .env &&
           echo 'DB_PASSWORD={{ env.DB_PASSWORD }}' >> .env &&
           echo 'DB_SCHEMA={{ env.DB_SCHEMA }}' >> .env &&
-          cat '${{ secrets.SSH_PVT_KEY }}' >> pvt_key.pem &&
+          cat '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
           ssh -i "pv_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@54.174.239.75 &&
           sleep 15 &&
           npm start &&
