--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -8,7 +8,7 @@ on:
       - 'src/*'
 permissions:
   id-token: write
-  contents: write
+  contents: read
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@master
       with:
         aws-region: ${{ vars.AWS_REGION }}
         role-to-assume: ${{ vars.IAM_ROLE }}
