--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -16,10 +16,11 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@master
+      uses: aws-actions/configure-aws-credentials@v1.7.0
       with:
-        aws-region: ${{ vars.AWS_REGION }}
         role-to-assume: ${{ vars.IAM_ROLE }}
+        role-to-assume:: GithubActionsOIDC
+        aws-region: ${{ vars.AWS_REGION }}
     - name: Start RDS Instance
       run: |
         aws rds start-db-instance --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }}
