--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -20,7 +20,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v1.7.0
       with:
         role-to-assume: ${{ vars.IAM_ROLE }}
-        role-to-assume:: GithubActionsOIDC
+        role-session-name: GithubActionsOIDC
         aws-region: ${{ vars.AWS_REGION }}
     - name: Start RDS Instance
       run: |
