--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -22,6 +22,7 @@ jobs:
         node-version: "18"
     - name: Build React App
       run: |
+        echo $PWD
         cd ${{ vars.FRONTEND_PATH }} &&
         npm install &&
         npm install @mui/material @emotion/react @emotion/styled @mui/icons-material &&
