--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -74,7 +74,7 @@ jobs:
           echo 'DB_HOST=${{ vars.DB_HOST }}' >> .env &&
           echo 'DB_PORT=${{ vars.DB_PORT }}' >> .env &&
           echo 'DB_USERNAME=${{ vars.DB_USERNAME }}' >> .env &&
-          echo 'DB_PASSWORD=${{ vars.DB_PASSWORD }}' >> .env &&
+          echo 'DB_PASSWORD=${{ secrets.DB_PASSWORD }}' >> .env &&
           echo 'DB_SCHEMA=${{ vars.DB_SCHEMA }}' >> .env &&
           cat '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
           ssh -i "pv_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@54.174.239.75 &&
