--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -39,20 +39,23 @@ jobs:
       run: |
        INSTANCE_STATUS=$(aws rds describe-db-instances --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }} --query 'DBInstances[0].DBInstanceStatus' --output text)
         if [ "$INSTANCE_STATUS" = "available" ]; then
-          aws rds reboot-db-instance --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }}
+          aws rds reboot-db-instance --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }} &&
+          sleep 120
         else
-          aws rds start-db-instance --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }}
-        fi &&
-        sleep 330
+          aws rds start-db-instance --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }} &&
+          sleep 330
+        fi 
     - name: Start EC2 Instance
       run: |
         INSTANCE_STATUS=$(aws ec2 describe-instances --instance-ids ${{ vars.EC2_INSTANCE_ID }} --query 'Reservations[0].Instances[0].State.Name' --output text)
         if [ "$INSTANCE_STATUS" = "running" ]; then
-          aws ec2 reboot-instances --instance-ids ${{ vars.EC2_INSTANCE_ID }}
+          aws ec2 reboot-instances --instance-ids ${{ vars.EC2_INSTANCE_ID }} &&
+          sleep 30
         else
-          aws ec2 start-instances --instance-ids ${{ vars.EC2_INSTANCE_ID }}
-        fi &&
-        sleep 90
+          aws ec2 start-instances --instance-ids ${{ vars.EC2_INSTANCE_ID }} &&
+          sleep 90
+        fi 
+        
     - name: Connect, Build and Deploy to EC2
       uses: appleboy/ssh-action@master
       with:
@@ -76,7 +79,7 @@ jobs:
           echo 'DB_USERNAME=${{ vars.DB_USERNAME }}' >> .env &&
           echo 'DB_PASSWORD=${{ secrets.DB_PASSWORD }}' >> .env &&
           echo 'DB_SCHEMA=${{ vars.DB_SCHEMA }}' >> .env &&
-          cat '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
+          echo '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
           ssh -i "pv_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@54.174.239.75 &&
           sleep 12 &&
           npm start
