--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -3,26 +3,27 @@ name: Dockerize App
 on:
   workflow_dispatch:
   push:
-  branches:
-    - main
-  paths:
-    - "src/*"
+    branches:
+      - main
+    paths:
+      - "src/*"
 permissions:
   id-token: write
   contents: read
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      with:
-        context: ${{ vars.BACKEND_PATH }}
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest
+  dockerize-app:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        with:
+          context: ${{ vars.BACKEND_PATH }}
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest
