--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ${{ vars.BACKEND_PATH }}
+          context: ./src/backend/
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest
