--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: ls dir
+        run: ls
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
