--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -22,7 +22,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: ls dir
-        run: ls ${{ vars.BACKEND_PATH }}
+        run: ls ./src/backend
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
