--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./src/backend
-          file: Dockerfile
+          file: ./DOCKERFILE
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest
     
