--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ./src/backend
-          file: ./Dockerfile
+          context: ./src/backend/
+          file: ./src/backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest
     
