--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
