--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:18-alpine
+WORKDIR /app
 
-COPY . /app
+COPY . .
 
-RUN npm cache clean --force
 RUN npm install
 RUN npm install @types/express @types/node
 
