--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -55,24 +55,13 @@ jobs:
           aws ec2 start-instances --instance-ids ${{ vars.EC2_INSTANCE_ID }} &&
           sleep 90
         fi 
-        
-    - name: Connect, Build and Deploy to EC2
+    - name: Connect and Build 
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.EC2_PUBLIC_IP }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          cd ${{ vars.REPO_PATH }} &&
-          git checkout main &&
-          git fetch --all && 
-          git reset --hard HEAD &&
-          git pull origin main &&
-          git clean -f &&
-          npm install @types/express &&
-          npm install @types/node &&
-          npm install &&
-          cd ${{ vars.BACKEND_PATH }} &&
           echo 'SECRET_KEY=${{ secrets.SECRET_KEY }}' >> .env &&
           echo 'DB_HOST=${{ vars.DB_HOST }}' >> .env &&
           echo 'DB_PORT=${{ vars.DB_PORT }}' >> .env &&
@@ -82,8 +71,9 @@ jobs:
           echo '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
           sudo chmod 400 pvt_key.pem &&
           ssh -i "pvt_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@${{ secrets.EC2_PUBLIC_IP }} &&
-          sleep 12 &&
-          npm start
+          sleep 10 &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest &&
+          docker run -d -p ${{ vars.DB_PORT }}:${{ vars.DB_PORT }} -p {{ vars.AWS_LB_PORT }}:{{ vars.AWS_LB_PORT }} --env-file .env
     - name: Running State
       run: sleep 4h
     - name: Close EC2 Instance
