--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -73,7 +73,7 @@ jobs:
           ssh -i "pvt_key.pem" -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@${{ secrets.EC2_PUBLIC_IP }} &&
           sleep 10 &&
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/unirent:latest &&
-          docker run -d -p ${{ vars.DB_PORT }}:${{ vars.DB_PORT }} -p {{ vars.AWS_LB_PORT }}:{{ vars.AWS_LB_PORT }} --env-file .env
+          docker run -d -p ${{ vars.DB_PORT }}:${{ vars.DB_PORT }} -p ${{ vars.AWS_LB_PORT }}:${{ vars.AWS_LB_PORT }} --env-file .env
     - name: Running State
       run: sleep 4h
     - name: Close EC2 Instance
