--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -56,7 +56,7 @@ jobs:
           sleep 90
         fi 
     - name: Connect and Build 
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v.0.1.3
       with:
         host: ${{ secrets.EC2_PUBLIC_IP }}
         username: ${{ secrets.SSH_USERNAME }}
