--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -27,7 +27,7 @@ jobs:
         npm install @mui/material @emotion/react @emotion/styled @mui/icons-material &&
         npm run build
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1.0.0
+      uses: aws-actions/configure-aws-credentials@master
       with:
         role-to-assume: ${{ vars.IAM_ROLE }}
         role-session-name: GithubActionsOIDC
@@ -56,7 +56,7 @@ jobs:
           sleep 90
         fi 
     - name: Connect and Build 
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.EC2_PUBLIC_IP }}
         username: ${{ secrets.SSH_USERNAME }}
