--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: AWS Full Deploy
+name: Teste
 
 on:
   workflow_dispatch:
@@ -21,4 +21,14 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         command_timeout: 30m
         script: |
-          echo "Hello world"
+          sudo rm * -rf &&
+          echo 'SECRET_KEY=${{ secrets.SECRET_KEY }}' >> .env &&
+          echo 'DB_HOST=${{ vars.DB_HOST }}' >> .env &&
+          echo 'DB_PORT=${{ vars.DB_PORT }}' >> .env &&
+          echo 'DB_USERNAME=${{ vars.DB_USERNAME }}' >> .env &&
+          echo 'DB_PASSWORD=${{ secrets.DB_PASSWORD }}' >> .env &&
+          echo 'DB_SCHEMA=${{ vars.DB_SCHEMA }}' >> .env &&
+          echo '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
+          sudo chmod 400 pvt_key.pem &&
+          ssh -i pvt_key.pem -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@${{ secrets.EC2_PUBLIC_IP }}
+          echo "lmao"
