--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
-    - name: Install Node.js
-      uses: actions/setup-node@v3
     - name: Connect and Build 
       uses: appleboy/ssh-action@master
       with:
@@ -30,5 +28,5 @@ jobs:
           echo 'DB_SCHEMA=${{ vars.DB_SCHEMA }}' >> .env &&
           echo '${{ secrets.SSH_PRIVATE_KEY }}' >> pvt_key.pem &&
           sudo chmod 400 pvt_key.pem &&
-          ssh -i pvt_key.pem -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@${{ secrets.EC2_PUBLIC_IP }}
+          ssh -i pvt_key.pem -o StrictHostKeyChecking=no -f -N -L 3310:${{ secrets.RDS_ENDPOINT }}:3306 ec2-user@${{ secrets.EC2_PUBLIC_IP }}
           echo "lmao"
