--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -5,7 +5,7 @@
       "es6"
     ],
     "target": "es5",
-    "module": "ES6",
+    "module": "esnext",
     "moduleResolution": "node",
     "outDir": "./build",
 
@@ -14,6 +14,6 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-
+    "resolveJsonModule": true
   }
 }
