--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -2,11 +2,10 @@ name: AWS Full Deploy
 
 on:
   workflow_dispatch:
-  push:
-    branches: 
-      - main
-    paths:
-      - 'src/*'
+  workflow_run:
+    workflows: ["dockerize"]
+    types:
+      - completed
 permissions:
   id-token: write
   contents: read
@@ -34,7 +33,8 @@ jobs:
         aws-region: ${{ vars.AWS_REGION }}
     - name: Deploy to S3
       run: |
-        aws s3 sync ${{ vars.FRONTEND_PATH }}/dist/ s3://${{ vars.S3_BUCKET_NAME }} --delete
+        aws s3 sync ${{ vars.FRONTEND_PATH }}/dist/ s3://${{ vars.S3_BUCKET_NAME }} --delete &&
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DIST_ID }} --paths "/*" 
     - name: Start RDS Instance
       run: |
        INSTANCE_STATUS=$(aws rds describe-db-instances --db-instance-identifier ${{ vars.RDS_INSTANCE_ID }} --query 'DBInstances[0].DBInstanceStatus' --output text)
