--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -3,10 +3,8 @@ WORKDIR /app
 
 COPY . .
 
+RUN npm install ts-node
 RUN npm install @types/express @types/node
 RUN npm install
-
-EXPOSE 3000
-EXPOSE 3310
 
 CMD ["npm", "start"]
